--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches-ignore:
       - master
-    paths-ignore:
-      - '**.md'
+    paths:
+      - '!**.md'
 
 jobs:
   test:
