--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,12 @@
       <artifactId>kafka-clients</artifactId>
       <version>2.5.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.kafka</groupId>
+      <artifactId>kafka-streams-test-utils</artifactId>
+      <version>2.5.0</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
