--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -23,7 +23,7 @@ jobs:
 
       # Packaging
       - name: Build with Maven
-        run: mvn -B package --file pom.xml
+        run: mvn clean compile assembly:single
 
       # Packaging workflow data as artifacts
       - run: mkdir staging && cp target/*.jar staging
