--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -32,7 +32,7 @@ jobs:
       - run: mkdir artifact && cp target/*.jar artifact
       - uses: actions/upload-artifact@v2
         with:
-          name: Package
+          name: artifact
           path: artifact
 
       # Download artifact
