--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -3,17 +3,19 @@ name: dev
 on: [pull_request]
 
 jobs:
+  env:
+    GITHUB_REPOSITORY: masatonaka/kafka-project-test
   test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
       # Setting up java
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
 
-      # Caching dependencies
       - name: Cache Maven packages
         uses: actions/cache@v2
         with:
@@ -21,25 +23,33 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
 
-      - name: Test
+      - name: Test with Maven
         run: mvn test
 
-      # Packaging
       - name: Build with Maven
         run: mvn clean compile assembly:single
 
-      # Packaging workflow data as artifacts
-      - uses: actions/upload-artifact@v2
+      - name: Packaging workflow data as artifacts
+        uses: actions/upload-artifact@v2
         with:
           name: target
           path: target
 
-      # Download artifact
-      - name: Download a single artifact
+      - name: Download an artifact
         uses: actions/download-artifact@v2
         with:
           name: target
 
-      - name: Build Docker image
-        run: |
-          docker build -t kafka-project-test . -f .github/Dockerfile
+      - name: Login to docker hub
+        uses: actions-hub/docker/login@master
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build :dev
+        run: docker build -f .github/Dockerfile -t ${GITHUB_REPOSITORY}:dev .
+
+      - name: Push to docker hub :dev
+        uses: actions-hub/docker@master
+        with:
+          args: push ${GITHUB_REPOSITORY}:dev
