--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -1,19 +1,24 @@
 name: dev
 
-on: [pull_request]
+on:
+  pull_request:
+    paths-ignore:
+      - '**.md'
 
 jobs:
-  test:
+  build:
+    env:
+      DOCKER_HUB_REPOSITORY: masatonaka/kafka-project-test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
       # Setting up java
       - name: Set up JDK 1.8
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
 
-      # Caching dependencies
       - name: Cache Maven packages
         uses: actions/cache@v2
         with:
@@ -21,13 +26,34 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
 
-      # Packaging
+      - name: Test with Maven
+        run: mvn test
+
       - name: Build with Maven
         run: mvn clean compile assembly:single
 
-      # Packaging workflow data as artifacts
-      - run: mkdir staging && cp target/*.jar staging
-      - uses: actions/upload-artifact@v2
+      - name: Packaging workflow data as artifacts
+        uses: actions/upload-artifact@v2
         with:
-          name: Package
-          path: staging
+          name: target
+          path: target
+
+      - name: Download an artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: target
+
+      # Docker Hub https://github.com/actions-hub/docker
+      - name: Login to docker hub
+        uses: actions-hub/docker/login@master
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build :dev
+        run: docker build -f .github/Dockerfile -t ${DOCKER_HUB_REPOSITORY}:dev .
+
+      - name: Push to docker hub :dev
+        uses: actions-hub/docker@master
+        with:
+          args: push ${DOCKER_HUB_REPOSITORY}:dev
